--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/env": "^15.0.1",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
+    "@tanstack/react-query": "^5.59.16",
     "aos": "^2.3.4",
+    "axios": "^1.7.7",
     "charting_library": "^1.0.2",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
     "lightweight-charts": "^4.2.1",
     "lucide": "^0.453.0",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
+    "next-intl": "^3.23.5",
+    "next-seo": "^6.6.0",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18"
@@ -29,6 +36,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "daisyui": "^4.12.13",
+    "eslint": "8.57.1",
+    "eslint-config-next": "15.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
