--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
