--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "14.2.15",
     "next-intl": "^3.23.5",
     "next-seo": "^6.6.0",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "daisyui": "^4.12.13",
