--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-quill": "^2.0.0",
     "sharp": "^0.33.5",
     "zod": "^3.23.8"
   },
