--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-quill": "^2.0.0",
+    "react-toastify": "^10.0.6",
     "sharp": "^0.33.5",
     "zod": "^3.23.8"
   },
